--- a/src/app/pages/secured-views/secured-views.component.html
+++ b/src/app/pages/secured-views/secured-views.component.html
@@ -1,6 +1,6 @@
-<mat-sidenav-container>
-  <mat-sidenav>
-
+<mat-sidenav-container class="w-full h-full">
+  <mat-sidenav mode="side" opened class="w-[20rem]">
+    <app-side-navigation></app-side-navigation>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar [color]="'primary'">
@@ -9,5 +9,8 @@
         <button mat-raised-button (click)="logout()">Log out</button>
       </section>
     </mat-toolbar>
+    <div class="flex flex-col flex-1 gap-4 relative">
+      <router-outlet></router-outlet>
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
